--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
 /.pnp
 .pnp.js
 
@@ -11,9 +12,9 @@
 # production
 /build
 
-.idea
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
