--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "config": "^3.2.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.5"
